@@ -36,6 +36,9 @@ Version 6.0
 
 - support for client-side tile layers (OSM, Google Maps etc)
 - mixed-mode printing (low resolution rasters + high resolution vectors)
+- option to exclude layers from qgis projects
+- support for the QGZ format
+
 
 
 
